tests/integration/snapshots/integration__api_route_snapshots_tests__capabilities_v3.snap
---
source: tests/integration/api_route_snapshots_tests.rs
expression: body
---
{
  "capabilities": {
    "io.element.msc4452.preview_url": {
      "enabled": false
    },
    "m.3pid_changes": {
      "enabled": true
    },
    "m.change_password": {
      "enabled": true
    },
    "m.forget_forced_upon_leave": {
      "enabled": true
    },
    "m.profile_fields": {
      "enabled": true
    },
    "m.room.suggested": {
      "enabled": true
    },
    "m.room.summary": {
      "enabled": true
    },
    "m.room_versions": {
      "available": {
        "1": "stable",
        "10": "stable",
        "11": "stable",
        "12": "stable",
        "2": "stable",
        "3": "stable",
        "4": "stable",
        "5": "stable",
        "6": "stable",
        "7": "stable",
        "8": "stable",
        "9": "stable"
      },
      "default": "12"
    },
    "m.set_avatar_url": {
      "enabled": true
    },
    "m.set_displayname": {
      "enabled": true
    },
    "m.thread": {
      "enabled": true
    },
    "m.voice": {
      "enabled": true
    },
    "org.matrix.msc3720.account_status": {
      "enabled": false
    }
  },
  "unstable_features": {
    "io.hula.burn_after_read": "[feature_gated]",
    "io.hula.friends": "[feature_gated]",
    "org.matrix.msc3245.voice": "[feature_gated]",
    "org.matrix.msc3873": "[feature_gated]",
    "org.matrix.msc3886.sliding_sync": "[feature_gated]",
    "org.matrix.msc3983.thread": "[feature_gated]",
    "org.matrix.msc4108": "[feature_gated]",
    "org.matrix.msc4155": "[feature_gated]",
    "org.matrix.msc4186": "[feature_gated]",
    "org.matrix.simplified_msc3575": "[feature_gated]",
    "uk.tcpip.msc4133": "[feature_gated]"
  }
}
