tests/integration/snapshots/integration__api_route_snapshots_tests__extended_profile_not_found.snap
---
source: tests/integration/api_route_snapshots_tests.rs
expression: body
---
{
  "errcode": "M_NOT_FOUND",
  "error": "User not found"
}
