tests/integration/snapshots/integration__api_route_snapshots_tests__join_unauthorized_without_token.snap
---
source: tests/integration/api_route_snapshots_tests.rs
expression: body
---
{
  "errcode": "M_UNAUTHORIZED",
  "error": "Missing or invalid authorization header"
}
