tests/integration/snapshots/integration__api_route_snapshots_tests__login_invalid_credentials_error.snap
---
source: tests/integration/api_route_snapshots_tests.rs
expression: body
---
{
  "errcode": "M_FORBIDDEN",
  "error": "Invalid credentials"
}
