tests/integration/snapshots/integration__api_route_snapshots_tests__register_flows_v3.snap
---
source: tests/integration/api_route_snapshots_tests.rs
expression: body
---
{
  "flows": [
    {
      "type": "m.login.dummy"
    },
    {
      "type": "m.login.password"
    }
  ],
  "params": {}
}
