tests/integration/snapshots/integration__api_route_snapshots_tests__register_uia_401_challenge.snap
---
source: tests/integration/api_route_snapshots_tests.rs
expression: body
---
{
  "flows": [
    {
      "stages": [
        "m.login.dummy"
      ]
    },
    {
      "stages": [
        "m.login.password"
      ]
    }
  ],
  "params": {},
  "session": "[redacted_session_uuid]"
}
