tests/integration/snapshots/integration__api_route_snapshots_tests__sync_authenticated_initial.snap
---
source: tests/integration/api_route_snapshots_tests.rs
expression: body
---
{
  "account_data": {
    "events": [
      {
        "content": {
          "global": {
            "content": [
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "highlight"
                  },
                  {
                    "set_tweak": "sound",
                    "value": "default"
                  }
                ],
                "default": true,
                "enabled": true,
                "pattern": "redacted_sync_user",
                "rule_id": ".m.rule.contains_user_name"
              }
            ],
            "override": [
              {
                "actions": [],
                "conditions": [],
                "default": true,
                "enabled": false,
                "rule_id": ".m.rule.master"
              },
              {
                "actions": [],
                "conditions": [
                  {
                    "key": "content.msgtype",
                    "kind": "event_match",
                    "pattern": "m.notice"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.suppress_notices"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "sound",
                    "value": "default"
                  },
                  {
                    "set_tweak": "highlight",
                    "value": false
                  }
                ],
                "conditions": [
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.room.member"
                  },
                  {
                    "key": "content.membership",
                    "kind": "event_match",
                    "pattern": "invite"
                  },
                  {
                    "key": "state_key",
                    "kind": "event_match",
                    "pattern": "@[redacted_sync_user]:localhost"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.invite_for_me"
              },
              {
                "actions": [],
                "conditions": [
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.room.member"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.member_event"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "highlight"
                  },
                  {
                    "set_tweak": "sound",
                    "value": "default"
                  }
                ],
                "conditions": [
                  {
                    "key": "content.m\\.mentions.user_ids",
                    "kind": "event_property_contains",
                    "value": "@[redacted_sync_user]:localhost"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.is_user_mention"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "highlight"
                  },
                  {
                    "set_tweak": "sound",
                    "value": "default"
                  }
                ],
                "conditions": [
                  {
                    "kind": "contains_display_name"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.contains_display_name"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "highlight"
                  }
                ],
                "conditions": [
                  {
                    "key": "content.m\\.mentions.room",
                    "kind": "event_property_is",
                    "value": true
                  },
                  {
                    "key": "room",
                    "kind": "sender_notification_permission"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.is_room_mention"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "highlight"
                  }
                ],
                "conditions": [
                  {
                    "key": "content.body",
                    "kind": "event_match",
                    "pattern": "@room"
                  },
                  {
                    "key": "room",
                    "kind": "sender_notification_permission"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.roomnotif"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "highlight"
                  }
                ],
                "conditions": [
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.room.tombstone"
                  },
                  {
                    "key": "state_key",
                    "kind": "event_match",
                    "pattern": ""
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.tombstone"
              },
              {
                "actions": [],
                "conditions": [
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.reaction"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.reaction"
              },
              {
                "actions": [],
                "conditions": [
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.room.server_acl"
                  },
                  {
                    "key": "state_key",
                    "kind": "event_match",
                    "pattern": ""
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.room.server_acl"
              },
              {
                "actions": [],
                "conditions": [
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.room.server_acl"
                  },
                  {
                    "key": "state_key",
                    "kind": "event_match",
                    "pattern": ""
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".org.matrix.msc3786.rule.room.server_acl"
              },
              {
                "actions": [],
                "conditions": [
                  {
                    "key": "content.m\\.relates_to.rel_type",
                    "kind": "event_property_is",
                    "value": "m.replace"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.suppress_edits"
              }
            ],
            "room": [],
            "sender": [],
            "underride": [
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "sound",
                    "value": "ring"
                  },
                  {
                    "set_tweak": "highlight",
                    "value": false
                  }
                ],
                "conditions": [
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.call.invite"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".org.matrix.msc3914.rule.room.call"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "sound",
                    "value": "default"
                  },
                  {
                    "set_tweak": "highlight",
                    "value": false
                  }
                ],
                "conditions": [
                  {
                    "is": "2",
                    "kind": "room_member_count"
                  },
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.room.encrypted"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.encrypted_room_one_to_one"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "sound",
                    "value": "default"
                  },
                  {
                    "set_tweak": "highlight",
                    "value": false
                  }
                ],
                "conditions": [
                  {
                    "is": "2",
                    "kind": "room_member_count"
                  },
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.room.message"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.room_one_to_one"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "highlight",
                    "value": false
                  }
                ],
                "conditions": [
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.room.message"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.message"
              },
              {
                "actions": [
                  "notify",
                  {
                    "set_tweak": "highlight",
                    "value": false
                  }
                ],
                "conditions": [
                  {
                    "key": "type",
                    "kind": "event_match",
                    "pattern": "m.room.encrypted"
                  }
                ],
                "default": true,
                "enabled": true,
                "rule_id": ".m.rule.encrypted"
              }
            ]
          }
        },
        "type": "m.push_rules"
      }
    ]
  },
  "device_list_changes": {
    "changed_count": 0,
    "left_count": 0,
    "users": {}
  },
  "device_lists": {
    "changed": [],
    "left": []
  },
  "device_one_time_keys_count": {},
  "device_unused_fallback_key_types": [],
  "key_rotation_needed": {
    "rooms": []
  },
  "next_batch": "[redacted_next_batch]",
  "presence": {
    "events": [
      {
        "content": {
          "avatar_url": null,
          "currently_active": true,
          "displayname": null,
          "last_active_ago": 0,
          "presence": "online",
          "status_msg": null,
          "user_id": "@[redacted_sync_user]:localhost"
        },
        "sender": "@[redacted_sync_user]:localhost",
        "type": "m.presence"
      }
    ]
  },
  "rooms": {
    "invite": {},
    "join": {},
    "knock": {},
    "leave": {}
  },
  "to_device": {
    "events": []
  }
}
